--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,1 @@
-langchain-community
-faiss-cpu
-langchain_google_genai
-pypdf
-langchain 
-langchain-pinecone
-weaviate-client
-langchain_weaviate
-wikipedia
-youtube_search
-langgraph
-chromadb
-langchain-chroma
+pydantic
